[tool.poetry]
name = "stockholm"
version = "0.4.4"
description = "Human friendly and flexible package for working with monetary amounts"
authors = ["Carl Oscar Aaro <hello@carloscar.com>"]
homepage = "https://github.com/kalaspuff/stockholm"
repository = "https://github.com/kalaspuff/stockholm"
keywords = ["money", "monetary amount", "monetary value", "currency", "formatting", "protobuf", "protocol buffers", "graphql", "money graphql", "protobuf money", "protocol buffers money", "json", "python money", "monetary object", "python money class", "finance", "fintech"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.7"
protobuf = { version = "^3", optional = true }

[tool.poetry.dev-dependencies]
flake8 = { version = ">=3.8.4", markers = "sys_platform != \"win32\"" }
flake8-black = { version = ">=0.2.0", markers = "sys_platform != \"win32\"" }
flake8-isort = { version = ">=4.0.0", markers = "sys_platform != \"win32\"" }
isort = { version = ">=5.6.0", markers = "sys_platform != \"win32\"" }
pytest = { version = ">=6.1.0", markers = "sys_platform != \"win32\"" }
pytest-cov = { version = ">=2.10.0", markers = "sys_platform != \"win32\"" }
black = { version = "*", markers = "sys_platform != \"win32\"", allow-prereleases = true }
mypy = { version = ">=0.800", markers = "sys_platform != \"win32\"" }
codecov = { version = ">=2.1.10", markers = "sys_platform != \"win32\"" }
protobuf = { version = "^3", markers = "sys_platform != \"win32\"" }
types-protobuf = { version = ">=0.1.13", markers = "sys_platform != \"win32\"" }
typing-extensions = {version = ">=3.7.4", markers = "python_version < \"3.8\" and sys_platform != \"win32\""}

[tool.poetry.extras]
protobuf = ["protobuf"]

[tool.black]
line-length = 120
target_version = ["py37", "py38", "py39"]
include = '\.pyi?$'
exclude = '\.eggs/|\.egg-info/|\.git/|\.github/|\.mypy_cache/|\.venv/|\.pytest_cache/|\.vscode/|__pycache__/|build/|dist/|setup\.py'

[tool.isort]
profile = "black"
line_length = 120
known_first_party = "stockholm"
skip = ".mypy_cache,__pycache__,.pytest_cache,.eggs,.venv,.git,.vscode,.github,dist"
